using UnityEngine;

public static class GameStrings
{
    public static string tag_Player = "Player";
    public static string tag_Enemy = "Enemy";
    public static string tag_Test = "Test";
    public static string tag_Bullet = "Bullet";

    public static string animator_state_poss1 = "Poss";
    public static string animator_state_poss2 = "Poss 2";
    public static string animator_state_poss3 = "Poss 3";
    public static string animator_state_poss4 = "Poss 4";
    public static string animator_stste_run = "Run";

    public static string animator_condition_poss = "Poss";
    public static string animator_condition_run = "Run";
    public static string animator_condition_DeathTrigger = "Death";
    public static string animator_condition_PunchTrigger = "Puch";
    public static string animator_condition_PossNumber = "PossNumber";
}